<resources>
    <string name="app_name">Blue Bay</string>

    <string name="login_label">Login</string>
    <string name="email_label">E-mail</string>
    <string name="password_label">Password</string>
    <string name="sign_up_label">Sign up</string>
    <string name="forgot_password_label">Forgot your password?</string>
    <string name="login_alternative">Sign in with</string>
    <string name="error_placeholder">Enter valid %s</string>
    <string name="error_base">Some fields are empty or invalid</string>
    <string name="login_success">Login success</string>
    <string name="repeat_password_label">Repeat password</string>
...
