<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

	<data>

		<variable
				name="input"
				type="com.mlykotom.valifi.fields.ValiFieldText" />

		<variable
				name="inputType"
				type="Integer" />

		<variable
				name="hint"
				type="String" />

		<variable
				name="drawable"
				type="android.graphics.drawable.Drawable"/>

	</data>


	<androidx.cardview.widget.CardView
			android:layout_width="match_parent"
			android:layout_marginStart="16dp"
			android:layout_marginEnd="16dp"
			android:backgroundTint="@color/tv_text_white"
			android:layout_height="@dimen/input_base_height"
			app:cardCornerRadius="@dimen/base_text_radius">

		<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/setProfileInput"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="4dp"
				app:error="@{input.error}"
				android:layout_marginStart="20dp"
				android:hint="@{hint}"
				android:textColorHint="@color/appBaseColor"
				app:errorEnabled="true"
				app:errorTextAppearance="@style/AppTheme.Error">

			<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/etProfileInput"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="2dp"
					android:drawablePadding="16dp"
					android:drawableStart="@{drawable}"
					android:background="@android:color/transparent"
					android:inputType="@{safeUnbox(inputType)}"
					android:textColor="@color/appAccentColor"
					android:layout_marginEnd="16dp"
					android:text="@={input.value}"
					android:textColorHint="@color/colorPrimaryDark" />

		</com.google.android.material.textfield.TextInputLayout>
	</androidx.cardview.widget.CardView>
</layout>