...
                    style="@style/ButtonStyleFill"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:backgroundTint="@color/appAccentColor"
                    android:text="@string/login_label"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/btn_login_menu_register"/>


            <Button
                    style="@style/ButtonStyleStroke"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
...
